# creator-spark-registry

./: LICENSE  LICENSING.md  README.md  analyzer.py  creators.json  package.json  pyproject.toml  registry.py
LICENSES/: COMMERCIAL.txt
src/: index.js
